--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="pixelArt.js"></script>
 </head>
 <body>
-    aaaa
-    <canvas id="pixelArt" width="1200" height="500"></canvas>
+    aaa
+    <main id="app"></main>
 </body>
 </html>
