--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genetic Algorithm</title>
+    <link rel="stylesheet" href="main.css">
     <script src="pixelArt.js"></script>
 </head>
 <body>
     <main id="app"></main>
+    <input type="button" value="Restart" class="btn" id="init">
+    <input type="button" value="Next" class="btn" id="next">
+    <span style="color:red";></span>
 </body>
 </html>
