--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <script src="pixelArt.js"></script>
 </head>
 <body>
+    <h1 id="generation"></h1>
     <main id="app"></main>
     <input type="button" value="Restart" class="btn" id="init">
     <input type="button" value="Next" class="btn" id="next">
-    <span style="color:red";></span>
+    <span style="color:red;" id="alert"></span>
 </body>
 </html>
